# klog-gtest

./: .clang-format  .gitignore  CMakeLists.txt  Klog-gtestConfig.cmake  Klog_gtestConfig.cmake  LICENSE  README.md
examples/: CMakeLists.txt  example.cc
lib/: CMakeLists.txt  internal_sample.cc  internal_sample.hh  main.cc  sample.cc
lib/include/: .no_headers  sample.hh
